--- a/index.html
+++ b/index.html
@@ -1,2 +1,68 @@
-おはようございます。
-いい天気ですね！
+<!DOCTYPE html>
+<html lang="ja">
+	<head>
+		<meta charset="utf-8" />
+		<title>mick</title>
+		<link rel="stylesheet" href="./style.css">
+	</head>
+	<body>
+		<div class="header">
+			<div class="header_title">mick</div>
+			<div class="header_menu"><img src="img/menu.png"></div>
+		</div>
+		<div>
+			<div class="mick">
+				<h1 class="logo">mick</h1>
+			</div>
+
+		</div>
+		<div class="design_area">
+			<div class="design">
+				<div class="design_title">Design</div>
+			</div>
+			<div class="design_image">
+				<img src="img/eye_1.jpg">
+				<img src="img/eye_2.jpg">
+				<img src="img/eye_3.jpg">
+			</div>
+		</div>
+
+		<div class="menu_area">
+			<div class="menu">
+				<div class="menu_title">Menu</div>				
+			</div>	
+			<div class="menu_course">
+
+				<div class="course_single">
+					<div class="course_singl_title">Single</div>
+					<div class="course_singl_menu">
+						<table>
+							<tr>
+								<td>80本　</td>
+								<td>￥4000</td>
+							</tr>
+							<tr>
+								<td>120本　</td>
+								<td>￥6000</td>
+							</tr>
+							<tr>
+								<td>160本　</td>
+								<td>￥8000</td>
+							</tr>
+							<tr>
+								<td class="single_40">＋40本ごと　</td>
+								<td class="single_40">￥2000</td>
+							</tr>
+						</table>
+					</div>	
+				</div>
+
+				<div class="course_volume"></div>
+					<div></div>
+				<div class="course_underlash"></div>
+				<div class="course_option"></div>
+				<div class="course_coupon"></div>
+			</div>
+		</div>
+	</body>
+</html>
