--- a/index.html
+++ b/index.html
@@ -39,26 +39,48 @@
 						<table>
 							<tr>
 								<td>80本　</td>
-								<td>￥4000</td>
+								<td>￥5000</td>
 							</tr>
 							<tr>
 								<td>120本　</td>
-								<td>￥6000</td>
+								<td>￥7000</td>
 							</tr>
 							<tr>
 								<td>160本　</td>
-								<td>￥8000</td>
+								<td>￥9000</td>
 							</tr>
 							<tr>
-								<td class="single_40">＋40本ごと　</td>
-								<td class="single_40">￥2000</td>
+								<td class="single_40">＋20本ごと　</td>
+								<td class="single_40">￥1000</td>
 							</tr>
 						</table>
 					</div>	
 				</div>
 
-				<div class="course_volume"></div>
-					<div></div>
+				<div class="course_volume">
+					<div class="course_volume_title">Volume</div>
+					<div class="course_volume_menu">
+						<table>
+							<tr>
+								<td>300本　</td>
+								<td>￥7000</td>
+							</tr>
+							<tr>
+								<td>500本　</td>
+								<td>￥9000</td>
+							</tr>
+							<tr>
+								<td>700本　</td>
+								<td>￥11,000</td>
+							</tr>
+							<tr>
+								<td class="volume_100">＋100本ごと　</td>
+								<td class="volume_100">￥1000</td>
+							</tr>
+						</table>
+					</div>
+				</div>
+
 				<div class="course_underlash"></div>
 				<div class="course_option"></div>
 				<div class="course_coupon"></div>
