画像の余白を作る前

--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
 				<div class="design_title">Design</div>
 			</div>
 			<div class="design_image">
-				<div><img src="img/eye_1.jpg"></div>
-				<div><img src="img/eye_2.jpg"></div>
-				<div><img src="img/eye_3.jpg"></div>
-				<div><img src="img/eye_4.jpg"></div>
-				<div><img src="img/eye_5.jpg"></div>
+				<div class="design_image_photo"><img src="img/eye_1.jpg"></div>
+				<div class="design_image_photo"><img src="img/eye_2.jpg"></div>
+				<div class="design_image_photo"><img src="img/eye_3.jpg"></div>
+				<div class="design_image_photo"><img src="img/eye_4.jpg"></div>
+				<div class="design_image_photo"><img src="img/eye_5.jpg"></div>
 			</div>
 		</div>
 
